Comment By Jack: 1. 增加CAS支持